update main text - corrected grammar

--- a/index.html
+++ b/index.html
@@ -39,10 +39,8 @@
               <div class="animated bounceInUp">
                 <h4>~ Welcome to my website ~</h4>
                     <p class="texto"> 
-                        My name is Miguel Rivas I'm newcomer at web development. I've spent just 6 months 
-                        coding on JavaScript. In my opinion JavaScript may be intimidating at the begining, but to understand it, is vital for web developers.
-                        I wish to build user interfaces, websites that feel right to use and that looks good. 
-                        So I would like to share and show you some games that I've developed in JavaScript, Html5 and Css3. I hope you enjoy it !
+                        My name is Miguel Rivas I'm a newcomer to web development. I've spent just 6 months coding on JavaScript. In my opinion, JavaScript may be intimidating at the beginning, but to understand it, is vital for web developers. I wish to build user interfaces, websites that feel right to use and that looks good. So I would like to share and show you some games that I've developed in JavaScript, Html5, and Css3. I hope you enjoy it!
+
                     </p>
                     <p>(Reload to play again in all cases)</p>
               </div>      
